--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ header img {
     min-height: 288px;
     max-width: 900%;
     height: 218px;
-    margin-top: 40px;
+    margin-top: 50px;
     text-align: center;
     align-self: center;
 }
@@ -69,7 +69,7 @@ header img {
 .header--title-container .header--button {
     position: absolute;
     left: calc(50% - 118px);
-    top: 272px;
+    top: 270px;
     display: block;
     margin-top: 35px;
     padding: 15px;
@@ -91,4 +91,170 @@ header img {
     height: 8px;
     margin-left: 10px;
     background-image: url("./assets/icons/down-arrow.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+main {
+    width: 100%;
+    min-width: 320px;
+    height: auto;
+    background-color: var(--off-white);
+}
+.main-exchange-container {
+    width: 100%;
+    height: auto;
+    padding-top: 80px;
+    padding-bottom: 30px;
+    text-align: center;
+}
+.main-exchange-container .backgroungImg {
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    background-image: url(./assets/img/Bitcoin.svg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.main-exchange-containter--title {
+    width: 90%;
+    min-width: 288px;
+    max-width: 900px;
+    margin: 0 auto; /* como no esta ocupando el 100% con esto se va a posicionar en el centro */
+}
+.main-exchange-containter--title h2 {
+    margin-bottom: 30px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--black);
+}
+.main-exchange-containter--title p {
+    margin-bottom: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.6rem;
+    color: #757575;
+}
+.main-currency-table {
+    width: 70%;
+    min-width: 235px;
+    max-width: 500px;
+    height: 360px;
+    margin: 0 auto;
+    font-family: "Inter", "sans-serif";
+}
+.comission-currency-table {
+    width: 70%;
+    min-width: 235px;
+    max-width: 500px;
+    height: 360px;
+    margin: 0 auto;
+    font-family: "Inter", "sans-serif";
+}
+.main-currency-table .currency-table--title {
+    margin-bottom: 10px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 2.3rem;
+    text-align: start;
+    color: var(--bitcoin-orange);
+}
+.comission-table--title {
+    margin-bottom: 10px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 2.3rem;
+    text-align: start;
+    color: var(--secondary-blue);
+}
+.currency-table--container {
+    width: 90%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 0 auto;
+}
+.comission-table--container {
+    width: 90%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 0 auto;
+}
+.currency-table--container table, .comission-table--container table {
+    width: 100%;
+    height: 100%;
+}
+.currency-table--container td, .comission-table--container td {
+    width: 50%;
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.9rem;
+    color: var(--grey);
+    background-color: var(--just-white);
+}
+.currency-table--container, .comission-table--container .table__top-left {
+    border-radius: 15px 0 0 0;
+}
+.currency-table--container, .comission-table--container .table__top-right {
+    border-radius: 0 15px 0 0;
+}
+.currency-table--container, .comission-table--container .table__bottom-left {
+    border-radius: 0 0 0 15px;
+}
+.currency-table--container, .comission-table--container .table__bottom-right {
+    border-radius: 0 0 15px 0;
+}
+.currency-table--container, .comission-table--container .table__right {
+    font-size: 1.4rem;
+    font-weight: normal;
+    line-height: 1.7rem;
+    color: #757575;
+}
+.currency-table--container .arrow-down {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+    background-image: url("./assets/icons/trending-down.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.currency-table--container .arrow-up {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+    background-image: url("./assets/icons/trending-up.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.currency-table--date {
+    width: 190px;
+    height: 30px;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 8px;
+    background-color: var(--soft-orange);
+    border-radius: 8px;
+}
+.comission-table--date {
+    width: 190px;
+    height: 30px;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 8px;
+    background-color: var(--secondary-blue);
+    border-radius: 8px;
+}
+.currency-table--date, .comission-table--date p {
+    font-size: 1.2rem;
+    font-weight: 300;
+    line-height: 1.5rem;
+    color: var(--warm-black);
 }
