--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ html {
     font-size: 62.5%;
     font-family: 'DM Sans', sans-serif;
 }
+/* Seccion del header */
 header {
     position: relative;
     display: flex;
@@ -90,11 +91,12 @@ header img {
     width: 13px;
     height: 8px;
     margin-left: 10px;
-    background-image: url("./assets/icons/down-arrow.svg");
+    background-image: url("../assets/icons/down-arrow.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
+/* Seccion de tablas */
 main {
     width: 100%;
     min-width: 320px;
@@ -113,7 +115,7 @@ main {
     height: 200px;
     margin: 0 auto;
     margin-bottom: 50px;
-    background-image: url(./assets/img/Bitcoin.svg);
+    background-image: url("../assets/img/Bitcoin.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -196,16 +198,16 @@ main {
     color: var(--grey);
     background-color: var(--just-white);
 }
-.currency-table--container, .comission-table--container .table__top-left {
+.currency-table--container .table__top-left, .comission-table--container .table__top-left {
     border-radius: 15px 0 0 0;
 }
-.currency-table--container, .comission-table--container .table__top-right {
+.currency-table--container .table__top-right, .comission-table--container .table__top-right {
     border-radius: 0 15px 0 0;
 }
-.currency-table--container, .comission-table--container .table__bottom-left {
+.currency-table--container .table__bottom-left, .comission-table--container .table__bottom-left {
     border-radius: 0 0 0 15px;
 }
-.currency-table--container, .comission-table--container .table__bottom-right {
+.currency-table--container .table__bottom-right, .comission-table--container .table__bottom-right {
     border-radius: 0 0 15px 0;
 }
 .currency-table--container, .comission-table--container .table__right {
@@ -219,7 +221,7 @@ main {
     width: 15px;
     height: 15px;
     margin-left: 10px;
-    background-image: url("./assets/icons/trending-down.svg");
+    background-image: url("../assets/icons/trending-down.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -229,13 +231,13 @@ main {
     width: 15px;
     height: 15px;
     margin-left: 10px;
-    background-image: url("./assets/icons/trending-up.svg");
+    background-image: url("../assets/icons/trending-up.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 .currency-table--date {
-    width: 190px;
+    width: max-content;
     height: 30px;
     margin: 0 auto;
     margin-top: 15px;
@@ -244,7 +246,7 @@ main {
     border-radius: 8px;
 }
 .comission-table--date {
-    width: 190px;
+    width: max-content;
     height: 30px;
     margin: 0 auto;
     margin-top: 15px;
@@ -257,4 +259,107 @@ main {
     font-weight: 300;
     line-height: 1.5rem;
     color: var(--warm-black);
+}
+/* ---Sección de beneficios--- */
+.main-product-detail {
+    position: relative;
+    width: 100%;
+    min-width: 320px;
+    height: auto;
+    padding: 20px 10px;
+    background-color: var(--warm-black);
+}
+.product-detail--batata-logo {
+    position: absolute;
+    width: 40px;
+    height: 25px;
+    top: -12px;
+    left: calc(50% - 20px);
+    background-image: url(../assets/icons/batata.svg);
+}
+.product-detail--title {
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 50px;
+    text-align: center;
+}
+.product-detail--title h2 {
+    margin-bottom: 20px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+.product-detail--title p {
+    margin-bottom: 20px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
+}
+.product-detail--card {
+    width: 90%;
+    min-width: 288px;
+    max-width: 400px;
+    height: 150px;
+    margin: 15px auto;
+    padding: 15px;
+    background-color: var(--black);
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgb(0,0,0, 0.16);
+}
+.product-detail--card .clock {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 10px;
+    background-image: url(../assets/icons/clock.svg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.product-detail--card .eye {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 10px;
+    background-image: url(../assets/icons/eye.svg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.product-detail--card .dollar {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 10px;
+    background-image: url(../assets/icons/dollar-sign.svg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.product-detail--card .fine {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 10px;
+    background-image: url(../assets/icons/check-circle.svg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.product--card-title {
+    margin-bottom: 15px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--just-white);
+}
+.product--card-body {
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
 }
